--- a/.github/workflows/django-tests.yaml
+++ b/.github/workflows/django-tests.yaml
@@ -31,5 +31,5 @@ jobs:
       working-directory: ./django
       run: python manage.py test
       env:
-        CS2PB_ADMIN_MAIL_ADDRESS: ${{ CS2PB_ADMIN_MAIL_ADDRESS }}
-        CS2PB_STEAM_API_KEY: ${{ CS2PB_STEAM_API_KEY }}
+        CS2PB_ADMIN_MAIL_ADDRESS: ${{ vars.CS2PB_ADMIN_MAIL_ADDRESS }}
+        CS2PB_STEAM_API_KEY: ${{ vars.CS2PB_STEAM_API_KEY }}
