--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ fonttools==4.53.1
 frozenlist==1.4.1
 gevent==21.12.0
 gevent-eventemitter==2.1
+gitpython==3.1.43
 greenlet==1.1.3
 idna==3.3
 importlib_resources==6.4.0
