--- a/.github/workflows/django-tests.yaml
+++ b/.github/workflows/django-tests.yaml
@@ -16,7 +16,8 @@ jobs:
 
     - uses: actions/checkout@v4
       with:
-        lfs: 'true'
+        lfs: 'false'
+        fetch-depth: 0
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
