--- a/.github/workflows/django-tests.yaml
+++ b/.github/workflows/django-tests.yaml
@@ -31,7 +31,7 @@ jobs:
         
     - name: Run test-suite
       working-directory: ./django
-      run: python manage.py test
+      run: python manage.py test --failfast
       env:
         CS2PB_ADMIN_MAIL_ADDRESS: ${{ vars.CS2PB_ADMIN_MAIL_ADDRESS }}
         CS2PB_STEAM_API_KEY: ${{ vars.CS2PB_STEAM_API_KEY }}
