--- a/.github/workflows/django-tests.yaml
+++ b/.github/workflows/django-tests.yaml
@@ -6,6 +6,10 @@ on:
   push:
     branches: ['master']
 
+permissions:
+  issues: write
+  pull-requests: write
+
 jobs:
   check_settings:
 
@@ -28,10 +32,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
-    - name: Run test-suite
-      working-directory: ./django
-      run: python manage.py test --failfast
+
+    - uses: kostrykin/report-test-coverage-action@v1.0.1
+      with:
+        gist-id: 48d2e30f4e914519ccb60090cf2ee742
+        github-auth: ${{ secrets.GITHUB_TOKEN }}
+        gist-auth: ${{ secrets.GIST_SECRET }}
+        gist-filename: cs2pb.json
+        working-directory: ./django
+        run: |
+          coverage run --source='.' manage.py test --failfast
+          python -m coverage json --omit "tests/*.py,*/tests.py,*/migrations/*.py,manage.py"
       env:
         CS2PB_ADMIN_MAIL_ADDRESS: ${{ vars.CS2PB_ADMIN_MAIL_ADDRESS }}
         CS2PB_STEAM_API_KEY: ${{ vars.CS2PB_STEAM_API_KEY }}
