--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ frozenlist==1.4.1
 gevent==23.9.0
 gevent-eventemitter==2.1
 gitpython==3.1.43
-greenlet==1.1.3
+greenlet>=2.0.0
 idna==3.3
 importlib_resources==6.4.0
 kiwisolver==1.4.5
