Add `CS2PB_STEAM_USERNAME` and `CS2PB_STEAM_PASSWORD` env vars

--- a/.github/workflows/django-tests.yaml
+++ b/.github/workflows/django-tests.yaml
@@ -46,3 +46,5 @@ jobs:
       env:
         CS2PB_ADMIN_MAIL_ADDRESS: ${{ vars.CS2PB_ADMIN_MAIL_ADDRESS }}
         CS2PB_STEAM_API_KEY: ${{ vars.CS2PB_STEAM_API_KEY }}
+        CS2PB_STEAM_USERNAME: ${{ vars.CS2PB_STEAM_USERNAME }}
+        CS2PB_STEAM_PASSWORD: ${{ vars.CS2PB_STEAM_PASSWORD }}
