Fix isort linting for whole project

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,13 @@
 [settings]
 
 multi_line_output = 3
+
 force_grid_wrap = 2
+
 include_trailing_comma = true
+
+skip_glob =
+    django/csgo_app/*.py
+    django/*/migrations/*.py
+    django/*/apps.py
+    django/awpy_fork/**/*.py
