--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ certifi==2024.7.4
 charset-normalizer==2.1.1
 click==8.1.7
 contourpy==1.2.1
-csgo @ git+https://github.com/SyberiaK/csgo@4a60581
+csgo @ git+https://github.com/kosmotive/csgo@4a60581
 cycler==0.12.1
 demoparser2==0.31.0
 discord.py==2.0.1
@@ -42,7 +42,7 @@ requests==2.28.1
 scipy==1.14.0
 six==1.16.0
 sqlparse==0.5.1
-steam @ git+https://github.com/njbooher/steam.git@e5b73f9
+steam @ git+https://github.com/kosmotive/steam@921c52d
 tqdm==4.66.4
 typing_extensions==4.12.2
 tzdata==2024.1
