--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ contourpy==1.2.1
 csgo @ git+https://github.com/kosmotive/csgo@4a60581
 cycler==0.12.1
 demoparser2==0.31.0
+dill>=0.3.8,<0.4
 discord.py==2.0.1
 Django==4.1.13
 fonttools==4.53.1
