--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -27,7 +27,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 isort
 
-    - name: Run linters
-      run: |
-        flake8 django
-        isort django --check-only --diff
+    - run: flake8 django
+
+    - run: isort django --check-only --diff
+
+    - uses: astral-sh/ruff-action@v3
