Upgrade to awpy==2.0.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,61 @@
-aiohttp==3.9.5
-aiosignal==1.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 asgiref==3.8.1
-async-timeout==4.0.3
-attrs==23.2.0
-awpy==2.0.0b4
-cachetools==5.4.0
-certifi==2024.7.4
-charset-normalizer==2.1.1
-click==8.1.7
-contourpy==1.2.1
-csgo @ git+https://github.com/kosmotive/csgo@4a60581
+attrs==25.3.0
+awpy==2.0.2
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+contourpy==1.3.2
+csgo @ git+https://github.com/kosmotive/csgo@4a60581f45112f6162fad68e59310f82218b3e9e
 cycler==0.12.1
-demoparser2==0.31.0
-dill>=0.3.8,<0.4
+demoparser2==0.38.0
+dill==0.3.9
 discord.py==2.0.1
 Django==4.1.13
-fonttools==4.53.1
-frozenlist==1.4.1
+fonttools==4.58.0
+frozenlist==1.6.0
 gevent==23.9.0
 gevent-eventemitter==2.1
-gitpython==3.1.43
+gitdb==4.0.12
+GitPython==3.1.43
 greenlet==3.0.3
-idna==3.3
-importlib_resources==6.4.0
-kiwisolver==1.4.5
-loguru==0.7.2
-matplotlib==3.9.1
-memory_profiler==0.61
+h11==0.16.0
+idna==3.10
+kiwisolver==1.4.8
+loguru==0.7.3
+matplotlib==3.10.3
+memory-profiler==0.61.0
 multidict==6.0.5
-numpy==1.26.4
-packaging==24.1
+networkx==3.4.2
+numpy==2.2.5
+packaging==25.0
 pandas==2.2.2
-pillow==10.4.0
-polars==1.2.1
-protobuf<=3.20
-pyarrow==17.0.0
-pycryptodomex==3.20.0
-pyparsing==3.1.2
+pillow==11.2.1
+polars==1.29.0
+propcache==0.3.1
+protobuf==3.20.0
+psutil==7.0.0
+pyarrow==20.0.0
+pycryptodomex==3.22.0
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.28.1
-scipy==1.14.0
-six==1.16.0
-sqlparse==0.5.1
-steam @ git+https://github.com/kosmotive/steam@921c52d
-tqdm==4.66.4
+pytz==2025.2
+requests==2.32.3
+scipy==1.15.3
+setuptools==80.4.0
+six==1.17.0
+smmap==5.0.2
+sqlparse==0.5.3
+steam @ git+https://github.com/kosmotive/steam@921c52d7f7394527d27a7bdb1eb394afab62b197
+tqdm==4.67.1
 typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==1.26.12
-usd-core==24.8
+tzdata==2025.2
+urllib3==1.26.20
 vdf==3.4
 wsproto==1.2.0
-yarl==1.9.4
-zipp==3.19.2
+yarl==1.20.0
 zope.event==5.0
-zope.interface==6.4.post2
+zope.interface==7.2
